# BaseKit-code-samples

VideoProcessingLibrary/08_memory_integration_openvino_object_detection_ssd_async/: Dockerfile  README.md  sample.json
VideoProcessingLibrary/08_memory_integration_openvino_object_detection_ssd_async/installer/: CMakeLists.txt  run-vpl-demo.sh
VideoProcessingLibrary/08_memory_integration_openvino_object_detection_ssd_async/installer/src/: memory_integration.cpp
